# python-sdk

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  readme.md  release-please-config.json  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: build-and-deploy.yml  build.yml  lint-pr.yml  merge.yml  pullrequest.yml  release.yml  test.yml
open_feature/: api.py  client.py  exception.py  flag_evaluation.py  open_feature_api.py  open_feature_client.py  open_feature_evaluation_context.py
open_feature/_backports/: strenum.py
open_feature/_internal/: hook_support.py
open_feature/evaluation_context/: evaluation_context.py
open_feature/exception/: error_code.py  exceptions.py
open_feature/flag_evaluation/: error_code.py  flag_evaluation_details.py  flag_evaluation_options.py  flag_type.py  reason.py  resolution_details.py
open_feature/hook/: __init__.py
open_feature/hooks/: __init__.py  hook.py  hook_context.py  hook_support.py  hook_type.py
open_feature/immutable_dict/: mapping_proxy_type.py
open_feature/provider/: flagd_provider.py  in_memory_provider.py  no_op_metadata.py  no_op_provider.py  provider.py
openfeature/: _api.py  _event_support.py  api.py  client.py  evaluation_context.py  event.py  exception.py  flag_evaluation.py  isolated.py  transaction_context.py
openfeature/_backports/: strenum.py
openfeature/_internal/: hook_support.py
openfeature/evaluation_context/: __init__.py
openfeature/hook/: __init__.py  _hook_support.py  hook.py  hook_support.py  logging_hook.py
openfeature/immutable_dict/: mapping_proxy_type.py
openfeature/provider/: __init__.py  _protocols.py  _registry.py  in_memory_provider.py  metadata.py  multi_provider.py  no_op_metadata.py  no_op_provider.py  provider.py  registry.py
openfeature/provider/multi_provider/: __init__.py  _provider.py  _strategies.py
openfeature/telemetry/: __init__.py  attributes.py  body.py  metadata.py
openfeature/track/: __init__.py
openfeature/transaction_context/: __init__.py  context_var_transaction_context_propagator.py  no_op_transaction_context_propagator.py  transaction_context_propagator.py
python_open_feature_sdk/: open_feature_api.py  open_feature_client.py
python_open_feature_sdk/exception/: exceptions.py
python_open_feature_sdk/flag_evaluation/: flag_evaluation_details.py
python_open_feature_sdk/provider/: no_op_provider.py
scripts/: scripts.py
src/: client.py  flag_type.py  open_feature.py  open_feature_api.py  open_feature_client.py
src/exception/: exceptions.py  flag_not_found_error.py  general_error.py  open_feature_error.py  parse_error.py  type_mismatch_error.py
src/flag/: abstact_flag.py  boolean_flag.py  flag_factory.py  number_flag.py  object_flag.py  string_flag.py
src/flag_evaluation/: error_code.py  flag_evaluation_details.py  flag_type.py  reason.py
src/provider/: no_op_provider.py  provider.py
src/provider/flagsmith/: flagsmith_provider.py
tests/: conftest.py  legacy_init_provider.py  test_api.py  test_async_client.py  test_client.py  test_exception.py  test_flag_evaluation.py  test_isolated_api.py  test_locks.py  test_multi_provider.py  test_open_feature_api.py  test_open_feature_client.py  test_open_feature_evaluation_context.py  test_open_feature_flag_evaluation.py  test_transaction_context.py  test_transaction_context_in_hooks.py
tests/evaluation_context/: test_evaluation_context.py
tests/features/: data.py  environment.py
tests/features/steps/: context_merging_steps.py  flag_steps.py  hooks_steps.py  metadata_steps.py  steps.py
tests/hook/: conftest.py  test_hook_data.py  test_hook_support.py  test_logging_hook.py
tests/hooks/: conftest.py  test_hook_support.py  test_init.py
tests/provider/: conftest.py  test_flagd_provider.py  test_in_memory_provider.py  test_no_op_provider.py  test_provider_compatibility.py  test_registry.py  test_registry_concurrency.py
tests/provider/flagsmith/: test_flagsmith_provider.py
tests/telemetry/: test_evaluation_event.py
tests/track/: test_tracking.py
tests/typechecking/: README.md  evaluation_context.py  hook_data.py  hook_hints.py
